syntax = "proto3";

package user;

service UserService {
  rpc GetUserProfile (GetUserProfileRequest) returns (UserProfileResponse);
}

message GetUserProfileRequest {
  string id = 1;
}

message UserProfileResponse {
  string id    = 1;
  string email = 2;
  string name  = 3;
}